--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^5.4.2",
     "next": "13.5.5",
     "next-auth": "^4.24.3",
     "react": "^18",
@@ -22,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
