--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^5.4.2",
+    "cloudinary": "^1.41.0",
     "next": "13.5.5",
     "next-auth": "^4.24.3",
+    "next-cloudinary": "^4.28.0",
     "react": "^18",
     "react-dom": "^18"
   },
